feat(apps): crud ok

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -22,3 +22,5 @@
 @import "./components/dropzone.scss";
 @import "./components/tables.scss";
 @import "./components/modal.scss";
+@import "./components/footer.scss";
+@import "./components/pagination.scss";
