--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -24,3 +24,4 @@
 @import "./components/modal.scss";
 @import "./components/footer.scss";
 @import "./components/pagination.scss";
+@import "./components/sentimentHistogram.scss";
