--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -16,7 +16,8 @@
 
 // Icons
 @import './icons/materialdesignicons.scss';
-
+// Pages
+@import "./pages/reviewAnalyzer.scss";
 // Components
 @import "./components/nav.scss";
 @import "./components/dropzone.scss";
